--- a/home.html
+++ b/home.html
@@ -3,214 +3,397 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>EverFrost - Accueil</title>
+<title>EverFrost - Home</title>
 <style>
+  /* Style global + barre nav */
   body {
-    margin: 0; font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    background: #0a2239;
-    color: #dbe9f4;
-    display: flex;
-    height: 100vh;
+    margin: 0; padding: 0; font-family: Arial, sans-serif;
+    background: #0f172a; color: #cbd5e1;
   }
   header {
-    position: fixed;
-    top: 0; left: 0; right: 0;
-    height: 50px;
-    background-color: #08203c;
+    background: #1e293b;
+    color: #cbd5e1;
+    padding: 10px 20px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 20px;
-    box-shadow: 0 3px 8px rgb(0 0 0 / 0.5);
-    z-index: 10;
   }
-  #logo {
-    font-weight: bold;
-    font-size: 1.5em;
-    color: #7fd1ff;
-    user-select: none;
+  header h1 {
+    margin: 0; font-weight: 700;
+    font-size: 1.5rem;
+    color: #7dd3fc;
   }
-  #userPanel {
-    display: flex;
-    align-items: center;
-    gap: 15px;
-  }
-  #pseudoUser { font-weight: 600; }
-  #diamantCount { font-weight: 700; color: #66d3ff; }
-  button {
-    background-color: #126fb2;
-    border: none;
-    border-radius: 4px;
-    color: #dbe9f4;
-    padding: 6px 12px;
+  #user-info {
     font-weight: 600;
+  }
+  #diamantCount {
+    color: #facc15;
+    margin-left: 8px;
+  }
+  button {
     cursor: pointer;
-    transition: background-color 0.25s ease;
+    background: #0284c7;
+    border: none;
+    color: white;
+    padding: 6px 12px;
+    border-radius: 4px;
+    font-weight: 600;
+    transition: background 0.3s ease;
   }
-  button:hover { background-color: #4ea7e8; }
-
-  /* Side menu */
-  #sideMenu {
-    margin-top: 50px;
-    width: 220px;
-    background: #08203c;
-    padding: 15px;
-    box-sizing: border-box;
-    overflow-y: auto;
+  button:hover {
+    background: #0369a1;
   }
-  #sideMenu h3 {
-    margin-top: 0;
-    color: #7fd1ff;
-    margin-bottom: 10px;
-  }
-  #serversList button {
-    width: 100%;
-    margin-bottom: 8px;
-    background-color: #126fb2;
-  }
-
-  /* Content area */
-  #contentArea {
-    margin-top: 50px;
-    flex-grow: 1;
+  main {
+    display: flex;
+    gap: 20px;
     padding: 20px;
+    height: calc(100vh - 60px);
+    box-sizing: border-box;
+  }
+  /* Colonne Serveurs + Shop */
+  #servers, #shop {
+    flex: 1 1 300px;
+    background: #1e293b;
+    border-radius: 8px;
+    padding: 15px;
     overflow-y: auto;
   }
-
-  /* Sections hidden by default */
-  .section {
-    display: none;
+  #servers h2, #shop h2, #transactions h2 {
+    color: #7dd3fc;
+    margin-top: 0;
   }
-  .section.active {
-    display: block;
+  /* Chat + Transactions */
+  #chat-transactions {
+    flex: 2 1 600px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
   }
-
-  /* Chat */
-  #chatMessages {
-    height: 180px;
+  #chat, #transactions {
+    background: #1e293b;
+    border-radius: 8px;
+    padding: 15px;
+    flex: 1 1 50%;
+    display: flex;
+    flex-direction: column;
+  }
+  #messages {
+    flex-grow: 1;
     overflow-y: auto;
-    border: 1px solid #2c668d;
-    background: #0e2b53;
-    padding: 10px;
+    background: #0f172a;
     border-radius: 6px;
-    font-size: 0.9em;
-    margin-bottom: 10px;
+    padding: 8px;
+    margin-bottom: 8px;
+    color: #e0e7ff;
+    font-size: 0.9rem;
   }
   #chatInput {
-    width: calc(100% - 90px);
     padding: 8px;
-    border: none;
-    border-radius: 4px 0 0 4px;
-    font-size: 1em;
-  }
-  #sendChatBtn {
-    width: 70px;
-    border-radius: 0 4px 4px 0;
-    font-weight: 700;
-  }
-
-  /* Transactions globales */
-  #transactionsList {
-    max-height: 150px;
-    overflow-y: auto;
-    border: 1px solid #2c668d;
-    background: #0e2b53;
-    padding: 15px;
     border-radius: 6px;
-    font-size: 0.9em;
-    color: #cbe6ff;
-  }
-  #transactionsList div {
+    border: none;
+    font-size: 1rem;
+    outline: none;
     margin-bottom: 8px;
+  }
+  /* Formulaires */
+  form {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+    margin-bottom: 12px;
+  }
+  form input[type=text], form input[type=number] {
+    flex-grow: 1;
+    padding: 6px 8px;
+    border-radius: 6px;
+    border: none;
+    outline: none;
+  }
+  form textarea {
+    width: 100%;
+    resize: vertical;
+    padding: 6px 8px;
+    border-radius: 6px;
+    border: none;
+    outline: none;
+  }
+  ul {
+    list-style: none;
+    padding-left: 0;
+    margin: 0;
+  }
+  ul li {
+    background: #334155;
+    margin-bottom: 8px;
+    padding: 8px;
+    border-radius: 6px;
+    cursor: pointer;
+  }
+  ul li:hover {
+    background: #475569;
+  }
+  ul li.selected {
+    background: #0284c7;
+  }
+  /* Shop entreprises + articles */
+  .enterprise {
+    margin-bottom: 12px;
+    border-bottom: 1px solid #475569;
+    padding-bottom: 8px;
+  }
+  .enterprise h3 {
+    margin: 0 0 4px 0;
+    color: #fbbf24;
+  }
+  .article {
+    background: #334155;
+    margin: 6px 0;
     padding: 6px;
-    background: #184d81;
-    border-radius: 4px;
+    border-radius: 6px;
+  }
+  .article-title {
+    font-weight: 600;
+  }
+  .article-desc {
+    font-size: 0.85rem;
+    color: #94a3b8;
   }
 </style>
 </head>
 <body>
 
 <header>
-  <div id="logo">EverFrost</div>
-  <div id="userPanel">
-    <div><strong id="pseudoUser">Utilisateur</strong> | 💎 <span id="diamantCount">0</span></div>
-    <button id="settingsBtn" title="Paramètres">⚙️</button>
-    <button id="logoutBtn">Déconnexion</button>
+  <h1>EverFrost</h1>
+  <div>
+    <span id="user-info">Utilisateur: <span id="pseudoUser">...</span> | 💎 <span id="diamantCount">0</span></span>
+    <button id="settingsBtn" style="margin-left:15px;">⚙️ Paramètres</button>
+    <button id="logoutBtn" style="margin-left:10px;">Déconnexion</button>
   </div>
 </header>
 
-<div id="sideMenu" style="margin-top:50px;">
-  <h3>Mes serveurs</h3>
-  <div id="serversList">
-    <!-- Boutons des serveurs vont ici -->
-  </div>
-</div>
+<main>
 
-<div id="contentArea">
-  <!-- Section Chat serveur -->
-  <section id="chatSection" class="section">
-    <h3>Chat du serveur <span id="currentServerName"></span></h3>
-    <div id="chatMessages"></div>
-    <div style="display:flex; margin-top:10px;">
-      <input id="chatInput" type="text" placeholder="Écrire un message..." autocomplete="off" />
-      <button id="sendChatBtn">Envoyer</button>
+  <section id="servers">
+    <h2>Mes serveurs Minecraft</h2>
+    <form id="addServerForm">
+      <input type="text" id="serverName" placeholder="Nom du serveur" required />
+      <input type="text" id="serverAddress" placeholder="Adresse IP ou URL" required />
+      <button type="submit">Ajouter serveur</button>
+    </form>
+    <ul id="serversList"></ul>
+  </section>
+
+  <section id="shop">
+    <h2>Magasin</h2>
+    <div id="shopContent">
+      <p>Sélectionnez un serveur pour voir ses entreprises et articles.</p>
+    </div>
+    <button id="createEnterpriseBtn" disabled>Créer une entreprise</button>
+  </section>
+
+  <section id="chat-transactions">
+    <div id="chat">
+      <h2>Chat serveur</h2>
+      <div id="messages"></div>
+      <input id="chatInput" placeholder="Envoyer un message..." autocomplete="off" />
+      <button id="sendBtn">Envoyer</button>
+    </div>
+
+    <div id="transactions">
+      <h2>Transactions récentes</h2>
+      <div id="transactionList" style="overflow-y:auto; flex-grow:1; background:#0f172a; padding:10px; border-radius:6px; color:#a5b4fc; font-size:0.9rem;"></div>
     </div>
   </section>
 
-  <!-- Section Shop serveur -->
-  <section id="shopSection" class="section">
-    <h3>Boutique du serveur <span id="currentServerNameShop"></span></h3>
-    <div id="enterprisesList">Chargement des entreprises...</div>
-  </section>
+</main>
 
-  <!-- Section Transactions globales -->
-  <section id="transactionsSection" style="margin-top: 20px;">
-    <h3>Transactions récentes (Global)</h3>
-    <div id="transactionsList">Chargement...</div>
-  </section>
-</div>
+<script type="module">
+// Import Firebase
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.1.0/firebase-app.js";
+import { getAuth, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.1.0/firebase-auth.js";
+import { getDatabase, ref, get, set, push, onValue } from "https://www.gstatic.com/firebasejs/10.1.0/firebase-database.js";
 
-<script type="module" src="home.js"></script>
-<script>
-  // Exemple basique pour gérer la navigation entre serveurs
-  const servers = [
-    { id: "titicraft", name: "Titicraft" },
-    { id: "serveurtropcool", name: "ServeurTropCool" },
-    // ajoute tes serveurs ici
-  ];
+const firebaseConfig = {
+  apiKey: "AIzaSyAzSzAc3Fz18PdgumpGY3_s2K42v2MzYK0",
+  authDomain: "message-957c6.firebaseapp.com",
+  databaseURL: "https://message-957c6-default-rtdb.europe-west1.firebasedatabase.app",
+  projectId: "message-957c6",
+  storageBucket: "message-957c6.firebasestorage.app",
+  messagingSenderId: "518720941529",
+  appId: "1:518720941529:web:7c6b444ef9ac0b0d127dc8",
+  measurementId: "G-GW0GKGQ9EP"
+};
 
-  const serversList = document.getElementById("serversList");
-  const chatSection = document.getElementById("chatSection");
-  const shopSection = document.getElementById("shopSection");
-  const currentServerName = document.getElementById("currentServerName");
-  const currentServerNameShop = document.getElementById("currentServerNameShop");
+const app = initializeApp(firebaseConfig);
+const auth = getAuth(app);
+const db = getDatabase(app);
 
-  function hideAllSections() {
-    chatSection.classList.remove("active");
-    shopSection.classList.remove("active");
+const pseudoUser = document.getElementById("pseudoUser");
+const diamantCount = document.getElementById("diamantCount");
+const logoutBtn = document.getElementById("logoutBtn");
+const settingsBtn = document.getElementById("settingsBtn");
+
+const serversList = document.getElementById("serversList");
+const addServerForm = document.getElementById("addServerForm");
+const serverNameInput = document.getElementById("serverName");
+const serverAddressInput = document.getElementById("serverAddress");
+
+const shopContent = document.getElementById("shopContent");
+const createEnterpriseBtn = document.getElementById("createEnterpriseBtn");
+
+const messagesDiv = document.getElementById("messages");
+const chatInput = document.getElementById("chatInput");
+const sendBtn = document.getElementById("sendBtn");
+
+const transactionList = document.getElementById("transactionList");
+
+let currentUser = null;
+let currentServerId = null;  // ID serveur sélectionné
+let serversData = {};
+let enterprisesData = {};
+let chatListenerUnsub = null;
+
+// Gestion authentification
+onAuthStateChanged(auth, async (user) => {
+  if (!user) {
+    window.location.href = "login.html";
+    return;
+  }
+  currentUser = user;
+  pseudoUser.textContent = user.displayName || "Utilisateur";
+
+  // Récupérer diamants
+  const diamondRef = ref(db, "users/" + user.uid + "/diamonds");
+  const diamondSnap = await get(diamondRef);
+  if (diamondSnap.exists()) {
+    diamantCount.textContent = diamondSnap.val();
+  } else {
+    diamantCount.textContent = "20"; // 20 diamants au début
+    await set(diamondRef, 20);
   }
 
-  // Crée les boutons serveurs dans le menu latéral
-  servers.forEach(server => {
-    const btn = document.createElement("button");
-    btn.textContent = server.name;
-    btn.addEventListener("click", () => {
-      hideAllSections();
-      // Par défaut on affiche chat
-      chatSection.classList.add("active");
-      currentServerName.textContent = server.name;
-      currentServerNameShop.textContent = server.name;
-      // TODO : charger chat et shop pour ce serveur
-    });
-    serversList.appendChild(btn);
+  loadServers();
+  loadTransactions();
+});
+
+// Déconnexion
+logoutBtn.onclick = () => {
+  signOut(auth).then(() => {
+    window.location.href = "login.html";
+  });
+};
+
+// Paramètres
+settingsBtn.onclick = () => {
+  window.location.href = "settings.html";
+};
+
+// Ajouter un serveur
+addServerForm.addEventListener("submit", async (e) => {
+  e.preventDefault();
+  if (!serverNameInput.value.trim() || !serverAddressInput.value.trim()) return;
+
+  const newServerRef = push(ref(db, `users/${currentUser.uid}/servers`));
+  await set(newServerRef, {
+    name: serverNameInput.value.trim(),
+    address: serverAddressInput.value.trim()
   });
 
-  // Au chargement, sélectionne le premier serveur
-  if(servers.length > 0) {
-    serversList.querySelector("button").click();
+  serverNameInput.value = "";
+  serverAddressInput.value = "";
+  loadServers();
+});
+
+// Charger serveurs utilisateur
+async function loadServers() {
+  const serversRef = ref(db, `users/${currentUser.uid}/servers`);
+  const snapshot = await get(serversRef);
+  serversList.innerHTML = "";
+  serversData = {};
+  if (snapshot.exists()) {
+    snapshot.forEach(child => {
+      const id = child.key;
+      const data = child.val();
+      serversData[id] = data;
+      const li = document.createElement("li");
+      li.textContent = `${data.name} (${data.address})`;
+      li.dataset.id = id;
+      li.onclick = () => selectServer(id);
+      serversList.appendChild(li);
+    });
   }
-</script>
+  if (Object.keys(serversData).length > 0) {
+    // Sélectionne le premier serveur automatiquement si aucun sélectionné
+    if (!currentServerId || !serversData[currentServerId]) selectServer(Object.keys(serversData)[0]);
+  } else {
+    shopContent.innerHTML = "<p>Vous n'avez pas encore de serveur. Ajoutez-en un pour commencer.</p>";
+    createEnterpriseBtn.disabled = true;
+    clearChat();
+  }
+}
 
-</body>
-</html>
+// Sélectionner un serveur
+async function selectServer(id) {
+  currentServerId = id;
+  // Marquer sélection dans la liste
+  for (const li of serversList.children) {
+    li.classList.toggle("selected", li.dataset.id === id);
+  }
+  createEnterpriseBtn.disabled = false;
 
+  loadEnterprises(id);
+  loadChat(id);
+}
+
+// Charger entreprises + articles d’un serveur
+async function loadEnterprises(serverId) {
+  const enterprisesRef = ref(db, `servers/${serverId}/enterprises`);
+  const snapshot = await get(enterprisesRef);
+  enterprisesData = {};
+  if (snapshot.exists()) {
+    enterprisesData = snapshot.val();
+  } else {
+    enterprisesData = {};
+  }
+  renderShop();
+}
+
+// Afficher le shop (entreprises + articles)
+function renderShop() {
+  if (!currentServerId) {
+    shopContent.innerHTML = "<p>Sélectionnez un serveur pour voir ses entreprises et articles.</p>";
+    return;
+  }
+  if (!enterprisesData || Object.keys(enterprisesData).length === 0) {
+    shopContent.innerHTML = "<p>Aucune entreprise sur ce serveur.</p>";
+    return;
+  }
+  let html = "";
+  for (const [enterpriseId, enterprise] of Object.entries(enterprisesData)) {
+    html += `<div class="enterprise">
+      <h3>${enterprise.name || "Entreprise sans nom"}</h3>
+      <ul>`;
+    if (enterprise.articles) {
+      for (const [articleId, article] of Object.entries(enterprise.articles)) {
+        html += `<li class="article" data-enterprise-id="${enterpriseId}" data-article-id="${articleId}">
+          <div class="article-title">${article.title || "Article"}</div>
+          <div class="article-desc">${article.description || ""}</div>
+          <div>Prix: ${article.price} 💎</div>
+          <button class="buyBtn" data-enterprise-id="${enterpriseId}" data-article-id="${articleId}">Acheter</button>
+        </li>`;
+      }
+    } else {
+      html += "<li>Aucun article</li>";
+    }
+    html += "</ul></div>";
+  }
+  shopContent.innerHTML = html;
+
+  // Ajouter écouteurs achats
+  document.querySelectorAll(".buyBtn").forEach(btn => {
+    btn.onclick = () => buyArticle(btn.dataset.enterpriseId, btn.dataset.articleId);
+  });
+}
+
+// Acheter un article
+async
