--- a/home.html
+++ b/home.html
@@ -5,395 +5,295 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>EverFrost - Home</title>
 <style>
-  /* Style global + barre nav */
+  /* Reset / base */
+  * {
+    box-sizing: border-box;
+  }
   body {
-    margin: 0; padding: 0; font-family: Arial, sans-serif;
-    background: #0f172a; color: #cbd5e1;
+    margin: 0; padding: 0; font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    background: #0e1621;
+    color: #c3d0d8;
   }
   header {
-    background: #1e293b;
-    color: #cbd5e1;
-    padding: 10px 20px;
+    background: #152238;
+    padding: 12px 20px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    border-bottom: 2px solid #4061f4;
   }
-  header h1 {
-    margin: 0; font-weight: 700;
-    font-size: 1.5rem;
-    color: #7dd3fc;
+  #logo {
+    font-weight: 900;
+    font-size: 1.6rem;
+    color: #4061f4;
   }
-  #user-info {
-    font-weight: 600;
-  }
-  #diamantCount {
-    color: #facc15;
-    margin-left: 8px;
-  }
-  button {
-    cursor: pointer;
-    background: #0284c7;
+  nav button {
+    background: #4061f4;
     border: none;
     color: white;
-    padding: 6px 12px;
-    border-radius: 4px;
+    padding: 8px 14px;
+    margin-left: 10px;
+    border-radius: 5px;
+    cursor: pointer;
     font-weight: 600;
-    transition: background 0.3s ease;
+    transition: background-color 0.3s;
   }
-  button:hover {
-    background: #0369a1;
+  nav button:hover {
+    background: #3051c4;
   }
+
   main {
     display: flex;
-    gap: 20px;
-    padding: 20px;
-    height: calc(100vh - 60px);
-    box-sizing: border-box;
+    height: calc(100vh - 56px);
+    gap: 10px;
+    padding: 15px 20px;
   }
-  /* Colonne Serveurs + Shop */
-  #servers, #shop {
-    flex: 1 1 300px;
-    background: #1e293b;
+
+  /* Left panel - serveurs */
+  #serverPanel {
+    background: #1c2940;
+    width: 220px;
     border-radius: 8px;
-    padding: 15px;
-    overflow-y: auto;
-  }
-  #servers h2, #shop h2, #transactions h2 {
-    color: #7dd3fc;
-    margin-top: 0;
-  }
-  /* Chat + Transactions */
-  #chat-transactions {
-    flex: 2 1 600px;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-  }
-  #chat, #transactions {
-    background: #1e293b;
-    border-radius: 8px;
-    padding: 15px;
-    flex: 1 1 50%;
+    padding: 12px;
     display: flex;
     flex-direction: column;
   }
-  #messages {
+  #serverPanel h2 {
+    margin: 0 0 12px 0;
+    font-weight: 700;
+    color: #81a2ff;
+  }
+  #serverList {
     flex-grow: 1;
     overflow-y: auto;
-    background: #0f172a;
-    border-radius: 6px;
+  }
+  .server-item {
+    background: #4061f4;
     padding: 8px;
+    border-radius: 6px;
     margin-bottom: 8px;
-    color: #e0e7ff;
-    font-size: 0.9rem;
+    cursor: pointer;
+    color: white;
+    user-select: none;
+    transition: background-color 0.3s;
+  }
+  .server-item:hover, .server-item.selected {
+    background: #3051c4;
+  }
+  #addServerForm {
+    margin-top: 12px;
+  }
+  #addServerForm input[type="text"] {
+    width: calc(100% - 90px);
+    padding: 6px 8px;
+    border-radius: 5px;
+    border: none;
+  }
+  #addServerForm button {
+    width: 80px;
+    margin-left: 8px;
+  }
+
+  /* Right panel - contenu (chat, shop, transactions) */
+  #contentPanel {
+    flex-grow: 1;
+    background: #182a49;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  /* Tabs */
+  #tabs {
+    display: flex;
+    border-bottom: 2px solid #4061f4;
+  }
+  #tabs button {
+    flex-grow: 1;
+    background: transparent;
+    border: none;
+    color: #9bb0ff;
+    padding: 12px 0;
+    font-weight: 600;
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s;
+  }
+  #tabs button.active {
+    background: #4061f4;
+    color: white;
+    border-radius: 8px 8px 0 0;
+  }
+
+  /* Tab content */
+  .tab-content {
+    flex-grow: 1;
+    overflow-y: auto;
+    padding: 15px;
+    color: #c3d0d8;
+  }
+
+  /* Chat */
+  #messages {
+    height: 350px;
+    background: #1f365f;
+    border-radius: 8px;
+    padding: 12px;
+    overflow-y: auto;
+    font-size: 14px;
+    line-height: 1.3;
+    margin-bottom: 10px;
+  }
+  #chatInputContainer {
+    display: flex;
   }
   #chatInput {
-    padding: 8px;
-    border-radius: 6px;
-    border: none;
-    font-size: 1rem;
-    outline: none;
-    margin-bottom: 8px;
-  }
-  /* Formulaires */
-  form {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 8px;
-    margin-bottom: 12px;
-  }
-  form input[type=text], form input[type=number] {
     flex-grow: 1;
-    padding: 6px 8px;
-    border-radius: 6px;
+    padding: 8px 12px;
+    border-radius: 6px 0 0 6px;
     border: none;
-    outline: none;
+    font-size: 14px;
   }
-  form textarea {
-    width: 100%;
-    resize: vertical;
-    padding: 6px 8px;
-    border-radius: 6px;
+  #sendBtn {
+    background: #4061f4;
     border: none;
-    outline: none;
-  }
-  ul {
-    list-style: none;
-    padding-left: 0;
-    margin: 0;
-  }
-  ul li {
-    background: #334155;
-    margin-bottom: 8px;
-    padding: 8px;
-    border-radius: 6px;
+    color: white;
+    padding: 8px 14px;
+    border-radius: 0 6px 6px 0;
     cursor: pointer;
   }
-  ul li:hover {
-    background: #475569;
+  #sendBtn:hover {
+    background: #3051c4;
   }
-  ul li.selected {
-    background: #0284c7;
+
+  /* Shop */
+  #shopSection {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
   }
-  /* Shop entreprises + articles */
-  .enterprise {
-    margin-bottom: 12px;
-    border-bottom: 1px solid #475569;
-    padding-bottom: 8px;
-  }
-  .enterprise h3 {
-    margin: 0 0 4px 0;
-    color: #fbbf24;
-  }
-  .article {
-    background: #334155;
-    margin: 6px 0;
-    padding: 6px;
+  #enterpriseList {
+    max-height: 160px;
+    overflow-y: auto;
+    border: 1px solid #4061f4;
     border-radius: 6px;
+    padding: 8px;
+    background: #1c2940;
   }
-  .article-title {
-    font-weight: 600;
+  .enterprise-item {
+    border-bottom: 1px solid #4061f4;
+    padding: 6px 0;
+    cursor: pointer;
   }
-  .article-desc {
-    font-size: 0.85rem;
-    color: #94a3b8;
+  .enterprise-item:last-child {
+    border-bottom: none;
+  }
+  .enterprise-item.selected {
+    background: #4061f4;
+    color: white;
+    border-radius: 4px;
+  }
+  #articleList {
+    max-height: 160px;
+    overflow-y: auto;
+    border: 1px solid #4061f4;
+    border-radius: 6px;
+    padding: 8px;
+    background: #1c2940;
+  }
+  .article-item {
+    border-bottom: 1px solid #4061f4;
+    padding: 6px 0;
+  }
+  .article-item:last-child {
+    border-bottom: none;
+  }
+
+  /* Transaction */
+  #transactionList {
+    max-height: 530px;
+    overflow-y: auto;
+    border: 1px solid #4061f4;
+    border-radius: 6px;
+    padding: 8px;
+    background: #1c2940;
+    font-size: 14px;
+  }
+
+  /* Forms */
+  input[type="text"], input[type="number"] {
+    background: #233454;
+    border: 1px solid #4061f4;
+    color: #c3d0d8;
+  }
+  button {
+    font-family: inherit;
   }
 </style>
 </head>
 <body>
 
 <header>
-  <h1>EverFrost</h1>
-  <div>
-    <span id="user-info">Utilisateur: <span id="pseudoUser">...</span> | 💎 <span id="diamantCount">0</span></span>
-    <button id="settingsBtn" style="margin-left:15px;">⚙️ Paramètres</button>
-    <button id="logoutBtn" style="margin-left:10px;">Déconnexion</button>
-  </div>
+  <div id="logo">EverFrost</div>
+  <nav>
+    <button id="settingsBtn">⚙️ Paramètres</button>
+    <button id="logoutBtn">Déconnexion</button>
+  </nav>
 </header>
 
 <main>
-
-  <section id="servers">
-    <h2>Mes serveurs Minecraft</h2>
+  <section id="serverPanel">
+    <h2>Mes Serveurs</h2>
+    <div id="serverList">
+      <!-- Serveurs ajoutés ici -->
+    </div>
     <form id="addServerForm">
-      <input type="text" id="serverName" placeholder="Nom du serveur" required />
-      <input type="text" id="serverAddress" placeholder="Adresse IP ou URL" required />
-      <button type="submit">Ajouter serveur</button>
+      <input type="text" id="newServerName" placeholder="Nom du serveur" required />
+      <button type="submit">Ajouter</button>
     </form>
-    <ul id="serversList"></ul>
   </section>
 
-  <section id="shop">
-    <h2>Magasin</h2>
-    <div id="shopContent">
-      <p>Sélectionnez un serveur pour voir ses entreprises et articles.</p>
+  <section id="contentPanel">
+    <div id="tabs">
+      <button class="tabBtn active" data-tab="chatTab">Chat</button>
+      <button class="tabBtn" data-tab="shopTab">Shop</button>
+      <button class="tabBtn" data-tab="transactionTab">Transactions</button>
     </div>
-    <button id="createEnterpriseBtn" disabled>Créer une entreprise</button>
-  </section>
 
-  <section id="chat-transactions">
-    <div id="chat">
-      <h2>Chat serveur</h2>
+    <div id="chatTab" class="tab-content">
       <div id="messages"></div>
-      <input id="chatInput" placeholder="Envoyer un message..." autocomplete="off" />
-      <button id="sendBtn">Envoyer</button>
+      <div id="chatInputContainer">
+        <input id="chatInput" type="text" placeholder="Écrire un message..." autocomplete="off" />
+        <button id="sendBtn">Envoyer</button>
+      </div>
     </div>
 
-    <div id="transactions">
-      <h2>Transactions récentes</h2>
-      <div id="transactionList" style="overflow-y:auto; flex-grow:1; background:#0f172a; padding:10px; border-radius:6px; color:#a5b4fc; font-size:0.9rem;"></div>
+    <div id="shopTab" class="tab-content" style="display:none;">
+      <h3>Entreprises</h3>
+      <div id="enterpriseList"></div>
+
+      <form id="addEnterpriseForm">
+        <input type="text" id="enterpriseName" placeholder="Nom entreprise" required />
+        <button type="submit">Créer entreprise</button>
+      </form>
+
+      <h3>Articles</h3>
+      <div id="articleList"></div>
+
+      <form id="addArticleForm">
+        <input type="text" id="articleTitle" placeholder="Titre article" required />
+        <input type="text" id="articleDescription" placeholder="Description (optionnel)" />
+        <input type="number" id="articlePrice" placeholder="Prix (diamants)" min="1" required />
+        <button type="submit">Ajouter article</button>
+      </form>
+    </div>
+
+    <div id="transactionTab" class="tab-content" style="display:none;">
+      <h3>Historique des transactions</h3>
+      <div id="transactionList"></div>
     </div>
   </section>
-
 </main>
 
-<script type="module">
-// Import Firebase
-import { initializeApp } from "https://www.gstatic.com/firebasejs/10.1.0/firebase-app.js";
-import { getAuth, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.1.0/firebase-auth.js";
-import { getDatabase, ref, get, set, push, onValue } from "https://www.gstatic.com/firebasejs/10.1.0/firebase-database.js";
-
-const firebaseConfig = {
-  apiKey: "AIzaSyAzSzAc3Fz18PdgumpGY3_s2K42v2MzYK0",
-  authDomain: "message-957c6.firebaseapp.com",
-  databaseURL: "https://message-957c6-default-rtdb.europe-west1.firebasedatabase.app",
-  projectId: "message-957c6",
-  storageBucket: "message-957c6.firebasestorage.app",
-  messagingSenderId: "518720941529",
-  appId: "1:518720941529:web:7c6b444ef9ac0b0d127dc8",
-  measurementId: "G-GW0GKGQ9EP"
-};
-
-const app = initializeApp(firebaseConfig);
-const auth = getAuth(app);
-const db = getDatabase(app);
-
-const pseudoUser = document.getElementById("pseudoUser");
-const diamantCount = document.getElementById("diamantCount");
-const logoutBtn = document.getElementById("logoutBtn");
-const settingsBtn = document.getElementById("settingsBtn");
-
-const serversList = document.getElementById("serversList");
-const addServerForm = document.getElementById("addServerForm");
-const serverNameInput = document.getElementById("serverName");
-const serverAddressInput = document.getElementById("serverAddress");
-
-const shopContent = document.getElementById("shopContent");
-const createEnterpriseBtn = document.getElementById("createEnterpriseBtn");
-
-const messagesDiv = document.getElementById("messages");
-const chatInput = document.getElementById("chatInput");
-const sendBtn = document.getElementById("sendBtn");
-
-const transactionList = document.getElementById("transactionList");
-
-let currentUser = null;
-let currentServerId = null;  // ID serveur sélectionné
-let serversData = {};
-let enterprisesData = {};
-let chatListenerUnsub = null;
-
-// Gestion authentification
-onAuthStateChanged(auth, async (user) => {
-  if (!user) {
-    window.location.href = "login.html";
-    return;
-  }
-  currentUser = user;
-  pseudoUser.textContent = user.displayName || "Utilisateur";
-
-  // Récupérer diamants
-  const diamondRef = ref(db, "users/" + user.uid + "/diamonds");
-  const diamondSnap = await get(diamondRef);
-  if (diamondSnap.exists()) {
-    diamantCount.textContent = diamondSnap.val();
-  } else {
-    diamantCount.textContent = "20"; // 20 diamants au début
-    await set(diamondRef, 20);
-  }
-
-  loadServers();
-  loadTransactions();
-});
-
-// Déconnexion
-logoutBtn.onclick = () => {
-  signOut(auth).then(() => {
-    window.location.href = "login.html";
-  });
-};
-
-// Paramètres
-settingsBtn.onclick = () => {
-  window.location.href = "settings.html";
-};
-
-// Ajouter un serveur
-addServerForm.addEventListener("submit", async (e) => {
-  e.preventDefault();
-  if (!serverNameInput.value.trim() || !serverAddressInput.value.trim()) return;
-
-  const newServerRef = push(ref(db, `users/${currentUser.uid}/servers`));
-  await set(newServerRef, {
-    name: serverNameInput.value.trim(),
-    address: serverAddressInput.value.trim()
-  });
-
-  serverNameInput.value = "";
-  serverAddressInput.value = "";
-  loadServers();
-});
-
-// Charger serveurs utilisateur
-async function loadServers() {
-  const serversRef = ref(db, `users/${currentUser.uid}/servers`);
-  const snapshot = await get(serversRef);
-  serversList.innerHTML = "";
-  serversData = {};
-  if (snapshot.exists()) {
-    snapshot.forEach(child => {
-      const id = child.key;
-      const data = child.val();
-      serversData[id] = data;
-      const li = document.createElement("li");
-      li.textContent = `${data.name} (${data.address})`;
-      li.dataset.id = id;
-      li.onclick = () => selectServer(id);
-      serversList.appendChild(li);
-    });
-  }
-  if (Object.keys(serversData).length > 0) {
-    // Sélectionne le premier serveur automatiquement si aucun sélectionné
-    if (!currentServerId || !serversData[currentServerId]) selectServer(Object.keys(serversData)[0]);
-  } else {
-    shopContent.innerHTML = "<p>Vous n'avez pas encore de serveur. Ajoutez-en un pour commencer.</p>";
-    createEnterpriseBtn.disabled = true;
-    clearChat();
-  }
-}
-
-// Sélectionner un serveur
-async function selectServer(id) {
-  currentServerId = id;
-  // Marquer sélection dans la liste
-  for (const li of serversList.children) {
-    li.classList.toggle("selected", li.dataset.id === id);
-  }
-  createEnterpriseBtn.disabled = false;
-
-  loadEnterprises(id);
-  loadChat(id);
-}
-
-// Charger entreprises + articles d’un serveur
-async function loadEnterprises(serverId) {
-  const enterprisesRef = ref(db, `servers/${serverId}/enterprises`);
-  const snapshot = await get(enterprisesRef);
-  enterprisesData = {};
-  if (snapshot.exists()) {
-    enterprisesData = snapshot.val();
-  } else {
-    enterprisesData = {};
-  }
-  renderShop();
-}
-
-// Afficher le shop (entreprises + articles)
-function renderShop() {
-  if (!currentServerId) {
-    shopContent.innerHTML = "<p>Sélectionnez un serveur pour voir ses entreprises et articles.</p>";
-    return;
-  }
-  if (!enterprisesData || Object.keys(enterprisesData).length === 0) {
-    shopContent.innerHTML = "<p>Aucune entreprise sur ce serveur.</p>";
-    return;
-  }
-  let html = "";
-  for (const [enterpriseId, enterprise] of Object.entries(enterprisesData)) {
-    html += `<div class="enterprise">
-      <h3>${enterprise.name || "Entreprise sans nom"}</h3>
-      <ul>`;
-    if (enterprise.articles) {
-      for (const [articleId, article] of Object.entries(enterprise.articles)) {
-        html += `<li class="article" data-enterprise-id="${enterpriseId}" data-article-id="${articleId}">
-          <div class="article-title">${article.title || "Article"}</div>
-          <div class="article-desc">${article.description || ""}</div>
-          <div>Prix: ${article.price} 💎</div>
-          <button class="buyBtn" data-enterprise-id="${enterpriseId}" data-article-id="${articleId}">Acheter</button>
-        </li>`;
-      }
-    } else {
-      html += "<li>Aucun article</li>";
-    }
-    html += "</ul></div>";
-  }
-  shopContent.innerHTML = html;
-
-  // Ajouter écouteurs achats
-  document.querySelectorAll(".buyBtn").forEach(btn => {
-    btn.onclick = () => buyArticle(btn.dataset.enterpriseId, btn.dataset.articleId);
-  });
-}
-
-// Acheter un article
-async
+<script type="module" src="home.js"></script>
+</body>
+</html>
