--- a/index.html
+++ b/index.html
@@ -103,15 +103,16 @@
 
   <script>
     // Your Firebase configuration (provided)
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
 const firebaseConfig = {
-  apiKey: "AIzaSyAzSzAc3Fz18PdgumpGY3_s2K42v2MzYK0",
-  authDomain: "message-957c6.firebaseapp.com",
-  databaseURL: "https://message-957c6-default-rtdb.europe-west1.firebasedatabase.app",
-  projectId: "message-957c6",
-  storageBucket: "message-957c6.firebasestorage.app",
-  messagingSenderId: "518720941529",
-  appId: "1:518720941529:web:7c6b444ef9ac0b0d127dc8",
-  measurementId: "G-GW0GKGQ9EP"
+  apiKey: "AIzaSyDyWu4TI4PIRXfeb7yqt0WIGClgu10IjkM",
+  authDomain: "kylita-f2923.firebaseapp.com",
+  databaseURL: "https://kylita-f2923-default-rtdb.firebaseio.com",
+  projectId: "kylita-f2923",
+  storageBucket: "kylita-f2923.firebasestorage.app",
+  messagingSenderId: "431823530994",
+  appId: "1:431823530994:web:88a07e633751686e5ad96b",
+  measurementId: "G-F4LLNWQJ16"
 };
 
     // Initialize Firebase
