--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Chat simple - KykyChat (Firebase)</title>
+  <title>Chat</title>
   <style>
     :root{--bg:#0f1724;--card:#0b1220;--accent:#60a5fa;--muted:#9aa4b2;--bubble:#0b1a2b}
     html,body{height:100%;margin:0;font-family:Inter,system-ui,Segoe UI,Roboto,"Helvetica Neue",Arial}
@@ -27,7 +27,7 @@
 <body>
   <div class="container">
     <header>
-      <h1>Chat simple — KykyChat</h1>
+      <h1>Chat</h1>
       <div class="user">Connecté en tant que <strong id="usernameDisplay">...</strong></div>
     </header>
 
