--- a/home.html
+++ b/home.html
@@ -42,7 +42,9 @@
       </div>
     </main>
   </div>
-
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
   <script type="module">
 // ===== CONFIG FIREBASE =====
 const firebaseConfig = {
