--- a/home.html
+++ b/home.html
@@ -5,23 +5,130 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Chat</title>
   <style>
-    :root{--bg:#0f1724;--card:#0b1220;--accent:#60a5fa;--muted:#9aa4b2;--bubble:#0b1a2b}
-    html,body{height:100%;margin:0;font-family:Inter,system-ui,Segoe UI,Roboto,"Helvetica Neue",Arial}
-    body{background:linear-gradient(180deg,#071022 0%,#08172a 100%);display:flex;align-items:center;justify-content:center;padding:24px;color:#e6eef6}
-    .container{width:100%;max-width:760px;background:linear-gradient(180deg,rgba(255,255,255,0.02),rgba(255,255,255,0.01));border-radius:12px;box-shadow:0 8px 30px rgba(2,6,23,0.6);overflow:hidden;border:1px solid rgba(255,255,255,0.03)}
-    header{display:flex;align-items:center;justify-content:space-between;padding:16px 20px;border-bottom:1px solid rgba(255,255,255,0.02)}
-    header h1{font-size:16px;margin:0}
-    header .user{font-size:13px;color:var(--muted)}
-    main{display:grid;grid-template-rows:1fr auto;min-height:480px}
-    #messages{padding:18px;overflow:auto;display:flex;flex-direction:column;gap:10px;background-image:linear-gradient(0deg, rgba(255,255,255,0.01), transparent)}
-    .msg{max-width:78%;padding:10px 12px;border-radius:10px;background:var(--bubble);box-shadow:inset 0 -1px 0 rgba(255,255,255,0.02)}
-    .meta{font-size:12px;color:var(--muted);margin-bottom:6px}
-    .mine{align-self:flex-end;background:linear-gradient(180deg, rgba(96,165,250,0.15), rgba(96,165,250,0.06));border:1px solid rgba(96,165,250,0.1)}
-    .controls{display:flex;gap:8px;padding:12px;border-top:1px solid rgba(255,255,255,0.02);background:linear-gradient(180deg, transparent, rgba(0,0,0,0.02));align-items:center}
-    .controls input[type=text]{flex:1;padding:10px 12px;border-radius:8px;border:1px solid rgba(255,255,255,0.03);background:transparent;color:inherit;font-size:14px}
-    .controls button{padding:10px 14px;border-radius:8px;border:none;background:var(--accent);color:#04223a;font-weight:600;cursor:pointer}
-    .small{font-size:12px;color:var(--muted)}
-    .empty{opacity:0.7;text-align:center;padding:40px;color:var(--muted)}
+:root {
+    --bg: #0f1724;
+    --card: #0b1220;
+    --accent: #60a5fa;
+    --muted: #9aa4b2;
+    --bubble: #0b1a2b;
+}
+
+html, body {
+    height: 100%;
+    margin: 0;
+    font-family: Inter, system-ui, Segoe UI, Roboto, "Helvetica Neue", Arial;
+    background: linear-gradient(180deg, #071022 0%, #08172a 100%);
+    display: flex;
+    flex-direction: column;
+    color: #e6eef6;
+}
+
+/* Conteneur plein écran */
+.container {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+/* Zone principale : messages + input */
+main {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+
+/* Liste des messages */
+#messages {
+    flex: 1;
+    padding: 18px;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    background: transparent;
+}
+
+/* Bulles messages */
+.msg {
+    max-width: 78%;
+    padding: 10px 12px;
+    border-radius: 10px;
+    background: var(--bubble);
+    box-shadow: inset 0 -1px 0 rgba(255,255,255,0.02);
+}
+.meta {
+    font-size: 12px;
+    color: var(--muted);
+    margin-bottom: 6px;
+}
+.mine {
+    align-self: flex-end;
+    background: linear-gradient(180deg, rgba(96,165,250,0.15), rgba(96,165,250,0.06));
+    border: 1px solid rgba(96,165,250,0.1);
+}
+
+/* Barre de contrôle */
+.controls {
+    display: flex;
+    gap: 8px;
+    padding: 12px;
+    position: relative;
+    background: transparent;
+}
+
+/* Effet glassmorphism + bulles */
+.controls::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    backdrop-filter: blur(12px);
+    background: rgba(255,255,255,0.05);
+    border-radius: 12px;
+    z-index: 0;
+}
+
+/* Animation bulles */
+.controls::after {
+    content: "";
+    position: absolute;
+    inset: 0;
+    background: radial-gradient(circle at 20% 20%, rgba(255,255,255,0.05) 5%, transparent 20%),
+                radial-gradient(circle at 80% 40%, rgba(255,255,255,0.05) 5%, transparent 20%),
+                radial-gradient(circle at 40% 80%, rgba(255,255,255,0.05) 5%, transparent 20%);
+    animation: bubbleMove 10s infinite linear;
+    z-index: 0;
+}
+
+@keyframes bubbleMove {
+    0% { background-position: 0 0, 0 0, 0 0; }
+    100% { background-position: 100px 200px, -150px 100px, 200px -150px; }
+}
+
+/* Champ texte */
+.controls input[type=text] {
+    flex: 1;
+    padding: 10px 12px;
+    border-radius: 8px;
+    border: 1px solid rgba(255,255,255,0.1);
+    background: rgba(255,255,255,0.08);
+    backdrop-filter: blur(8px);
+    color: inherit;
+    font-size: 14px;
+    z-index: 1;
+}
+
+/* Bouton envoyer avec image */
+.controls button {
+    width: 40px;
+    height: 40px;
+    border-radius: 8px;
+    border: none;
+    background: url("send.png") center/20px no-repeat var(--accent);
+    cursor: pointer;
+    z-index: 1;
+}
+
   </style>
 </head>
 <body>
