--- a/home.html
+++ b/home.html
@@ -128,6 +128,21 @@ main {
     cursor: pointer;
     z-index: 1;
 }
+.msg {
+  max-width: 60%;
+  margin: 5px 0;
+  padding: 8px 12px;
+  background: #eee;
+  border-radius: 8px;
+  clear: both;
+}
+
+.msg.mine {
+  background: #4a90e2;
+  color: white;
+  margin-left: auto;  /* pousse à droite */
+  text-align: right;
+}
 
   </style>
 </head>
@@ -232,6 +247,7 @@ function renderMessage(obj) {
   
   messagesEl.scrollTop = messagesEl.scrollHeight;
 }
+
 
 // Messages système (connexion/déconnexion)
 function renderSystemMessage(text, color) {
